# claude-badpunpc

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  STRATEGY.md  answers.jsonl
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
solver/: README.md  pyproject.toml  requirements.txt  solver.py
