[project]
name = "claude-badpunpc-solver"
version = "0.1.0"
description = "让 Claude 自动通关 Steam 游戏《这是谐音梗》(BadPunPC)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "xiaoshuntian" }]
keywords = ["claude", "anthropic", "puzzle", "automation", "wordle", "chinese-puns"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment :: Puzzle Games",
]
dependencies = [
    "anthropic>=0.40.0",
    "pillow>=10.0.0",
    "pyautogui>=0.9.54",
    "pyperclip>=1.8.2",
    "pygetwindow>=0.0.9",
    "mss>=9.0.1",
]

[project.urls]
Homepage = "https://github.com/xiaoshuntian/claude-badpunpc"
Issues = "https://github.com/xiaoshuntian/claude-badpunpc/issues"
Changelog = "https://github.com/xiaoshuntian/claude-badpunpc/blob/main/CHANGELOG.md"

[project.scripts]
badpunpc-solver = "solver:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long — 提示词字符串里中文很长
]

[tool.ruff.format]
quote-style = "double"
